--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "esbuild src/main.ts --minify --sourcemap --outfile=dist/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "esbuild src/byoww.ts --minify --sourcemap --outfile=dist/byoww.js"
   },
   "keywords": [],
   "author": "",
